# InferDT

./: CMakeLists.txt  InferDT  README.md
data/: 500_Person_Gender_Height_Weight_Index.csv  balance-scale.csv  balance-scale.csv.test0.csv  balance-scale.csv.test1.csv  balance-scale.csv.test2.csv  balance-scale.csv.test3.csv  balance-scale.csv.test4.csv  balance-scale.csv.train0.csv  balance-scale.csv.train1.csv  balance-scale.csv.train2.csv  balance-scale.csv.train3.csv  balance-scale.csv.train4.csv  balance-scale_bin0.csv  balance-scale_bin1.csv  balance-scale_bin2.csv  car.csv  iris.csv  iris.csv.test0.csv  iris.csv.test1.csv  iris.csv.test2.csv  iris.csv.test3.csv  iris.csv.test4.csv  iris.csv.train0.csv  iris.csv.train1.csv  iris.csv.train2.csv  iris.csv.train3.csv  iris.csv.train4.csv  lung_cancer_examples.csv  monk1.csv  monk1.csv.test0.csv  monk1.csv.test1.csv  monk1.csv.test2.csv  monk1.csv.test3.csv  monk1.csv.test4.csv  monk1.csv.train0.csv  monk1.csv.train1.csv  monk1.csv.train2.csv  monk1.csv.train3.csv  monk1.csv.train4.csv  monk2.csv  (+34 more)
src/: CLI11.hpp  CSV.h  Chrono.h  Moy.h  coutUtil.h  incrementallearner.h  infering.h  main.cpp  tabular_data.h  tree.h  utile.h  xdot.h
